# folio-assistant

./: .beans.yml  .dockerignore  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  LICENSE  README.md  architecture.html  content-types.html  contributing.html  fix_env_injection.py  folio.config.example.json  getting-started.html  index.html  installation.html  package.json  playwright.config.ts  skills.html  tsconfig.json
docs/: Gemfile  (+11 more)
qou-mass/: .gitignore  README.md  pyproject.toml
qou-mass/src/qou_mass/: __init__.py  _version.py  api.py  prediction.py
qou-mass/src/qou_mass/_internal/: _precision.py  active_set_pruning.py  canonical_braid_crossings.py  codata_constants.py  experimental_constants.py  hecke_characters.py  hoefsmit_symbolic.py  isotope_record_schema.py  knot_volumes.py  markov_trace_recursive.py  markov_weights_symbolic.py  q_parameter.py  wedderburn_jones_markov.py  witness_base.py
qou-mass/src/qou_mass/data/: ame2020.json  canonical-mass-table-extended.witness.json  m-p-borromean-verification-50dps.witness.json
qou-mass/src/qou_mass/data/isotopes/: canonical-isotope-witness-Z00.witness.json  canonical-isotope-witness-Z01.witness.json  canonical-isotope-witness-Z02.witness.json  canonical-isotope-witness-Z03.witness.json  canonical-isotope-witness-Z04.witness.json  canonical-isotope-witness-Z05.witness.json  canonical-isotope-witness-Z06.witness.json  canonical-isotope-witness-Z07.witness.json  canonical-isotope-witness-Z08.witness.json  canonical-isotope-witness-Z09.witness.json  canonical-isotope-witness-Z10.witness.json  canonical-isotope-witness-Z100.witness.json  canonical-isotope-witness-Z101.witness.json  canonical-isotope-witness-Z102.witness.json  canonical-isotope-witness-Z103.witness.json  canonical-isotope-witness-Z104.witness.json  canonical-isotope-witness-Z105.witness.json  (+103 more)
qou-mass/tests/: test_p2_integration.py  test_public_api_shape.py
schemas/block-qa-schema/: README.md  package.json  pyproject.toml
schemas/block-qa-schema/js/: index.ts
schemas/block-qa-schema/python/block_qa_schema/: __init__.py
schemas/block-qa-schema/schema/: block-qa.schema.json  qa-script.schema.json
schemas/block-qa-schema/tests/: test_python.py
schemas/witness-schema/: README.md  package.json  pyproject.toml
schemas/witness-schema/js/: index.ts
schemas/witness-schema/python/witness_schema/: __init__.py
schemas/witness-schema/schema/: witness.schema.json
schemas/witness-schema/tests/: test_python.py
tools/hecke-engine/: CLARABEL_PRECISION_PLAN.md  Cargo.toml  R5_5_BUG_REPORT.md  R5_6_DECOMPOSITION_PLAN.md  R5_FULL_PLAN.md  README.md  RUST_INTEGRATION.md  SOLVER_SWAP_STATUS.md  build.rs  certificate-10b.json  certificate-10be.json  certificate-10he.json  certificate-10li.json  certificate-11b.json  certificate-11be.json  certificate-11c.json  certificate-11li.json  certificate-12b.json  certificate-12be.json  certificate-12c.json  certificate-12n.json  certificate-12o.json  certificate-13b.json  certificate-13c.json  certificate-13n.json  certificate-13o.json  certificate-14c.json  certificate-14n.json  certificate-16o.json  certificate-19f.json  certificate-1h.json  certificate-20ne.json  certificate-2h.json  certificate-3h.json  certificate-3he.json  certificate-40ar.json  certificate-40ca.json  certificate-4h.json  certificate-4he-crt.json  certificate-4he.json  (+66 more)
tools/hecke-engine-c/: .gitignore  Cargo.toml  README.md  build.rs  cbindgen.toml
tools/hecke-engine-c/include/: .gitkeep  hecke_engine.h
tools/hecke-engine-c/src/: lib.rs
tools/hecke-engine-c/test/: smoke.c
tools/hecke-engine-gap/src/: HeckeEngine.c  Makefile.in  configure.ac
tools/hecke-engine-jvm/: .gitignore  Cargo.toml  README.md  build.rs  uniffi-bindgen.rs  uniffi.toml
tools/hecke-engine-jvm/src/: hecke_engine_jvm.udl  lib.rs
tools/hecke-engine-node/: .gitignore  Cargo.toml  README.md  build.rs  package.json
tools/hecke-engine-node/src/: lib.rs
tools/hecke-engine-r/src/rust/: Cargo.toml
tools/hecke-engine-wasm/: .gitignore  Cargo.toml  README.md  package.json
tools/hecke-engine-wasm/src/: lib.rs
tools/hecke-engine/schemas/: certificate.schema.json  gram.schema.json  witness.schema.json
tools/hecke-engine/src/: atomic_reduce_cache.rs  certificate.rs  cross_level_embedding.rs  dense_la_mpfr.rs  gb_nf_reducer.rs  geck_pfeiffer.rs  gram.rs  joint_tower_sdp_certificate.rs  laurent_hecke_element.rs  laurent_poly_q.rs  laurent_rational_q.rs  lib.rs  littlewood_richardson.rs  main.rs  matrix_m_mpfr.rs  operator_selection_lp.rs  operator_selection_sdp.rs  precision_scalar.rs  rational_round.rs  reduce_laurent.rs  sdp_clarabel_mpfr_prep.rs  sdp_dual_certificate.rs  sdp_per_block.rs  sdp_recover_canonical.rs  sdp_solve_canonical_t_w.rs  sdp_solver_clarabel.rs  sdp_verifier.rs  seminormal.rs  seminormal_mn.rs  seminormal_mn_qdef_design.md  seminormal_mpfr.rs  sturm_psd.rs  tr_m_atomic_mpfr.rs  tr_m_word_lq.rs  wedderburn_psd.rs  wenzl_lr.rs
tools/hecke-engine/src/archive/: v2.rs  v3.rs  v4.rs  v5.rs  v7.rs
tools/pyhecke/: CHANGELOG.md  MIGRATION.md  README.md  pyproject.toml
tools/pyhecke-native/: .gitignore  Cargo.toml  README.md  pyproject.toml
tools/pyhecke-native/src/: lib.rs
tools/pyhecke/python/pyhecke/: __init__.py  _legacy.py  atom.py  bridge.py  certificate.py  constants.py  crt.py  galois_paired.py  gram.py  laurent_q.py  lp_dual_solver.py  metallic_q_arith.py  molecular.py  partition.py  regime_scanner.py  schema.py  sdp.py  skew_syt.py  syt_prefix_cache.py  tower.py  trace.py  trace_formal.py  undo.py  wedderburn.py
tools/pyhecke/tests/: test_bridge.py  test_crt.py  test_galois_paired.py  test_gram_values.py  test_hecke_cli.py  test_markov_combo.py  test_metallic_q_arith.py  test_native.py  test_rust_gram.py  test_schema.py  test_sdp.py  test_skew_syt.py  test_trace_formal.py  test_undo.py
tools/qou-substrate/: CHANGELOG.md  README.md  pyproject.toml
tools/qou-substrate/python/qou_substrate/: __init__.py  constants.py  precision.py  witness.py
tools/qou-substrate/tests/: test_ephemeral_mask_sync.py  test_smoke.py
(+814 files in other folders)
