[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "qou-mass"
version = "0.1.0a1"
description = "Quantum Observable Universe mass-prediction library — |tr_M(β_atom, q_0)|, binding energies, nucleon masses via the canonical-derivation pipeline."
authors = [{name = "Steven Q. Smith", email = "litlfred@users.noreply.github.com"}]
license = {text = "see LICENSE in https://github.com/litlfred/qou"}
readme = "README.md"
requires-python = ">=3.10"
keywords = [
    "physics",
    "quantum-observable-universe",
    "mass-prediction",
    "markov-trace",
    "hecke-algebra",
    "borromean-tower",
    "knot-theory",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "mpmath>=1.3",
    "sympy>=1.12",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "ruff>=0.4",
    "mypy>=1.8",
]
rust = [
    # No PyO3 bindings in v1; the optional rust path is via the
    # standalone hecke-canonical-chi binary discovered on $PATH.
    # See qou_mass._rust.locator. This extras_require slot is
    # reserved for future PyO3 wheels.
]

[project.urls]
Homepage = "https://github.com/litlfred/qou"
Documentation = "https://github.com/litlfred/qou/tree/main/qou-mass/README.md"
Repository = "https://github.com/litlfred/qou"
Issues = "https://github.com/litlfred/qou/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"qou_mass" = ["data/*.json"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = []

[tool.mypy]
python_version = "3.10"
strict = false
warn_return_any = true
warn_unused_configs = true
