[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "block-qa-schema"
version = "0.1.0"
description = "Pydantic models for the QOU block-QA sidecar format. Cross-language interchange schema for <block>.qa.json multi-reviewer audit reports and <criterion-id>.script.json checker-staleness sidecars."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quantum Observable Universe contributors" }]
keywords = ["qa", "audit", "json-schema", "pydantic", "qou", "provenance", "staleness"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: File Formats :: JSON :: JSON Schema",
]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "jsonschema>=4"]

[project.urls]
Homepage = "https://github.com/litlfred/qou"
Source = "https://github.com/litlfred/qou/tree/main/tools/block-qa-schema"
Issues = "https://github.com/litlfred/qou/issues"
"JSON Schema" = "https://github.com/litlfred/qou/blob/main/tools/block-qa-schema/schema/block-qa.schema.json"

[tool.hatch.build.targets.wheel]
packages = ["python/block_qa_schema"]

# Include the canonical JSON schemas in the wheel as package data so
# `pip install block-qa-schema` users can locate them at runtime via
# `importlib.resources.files("block_qa_schema") / "block-qa.schema.json"`.
[tool.hatch.build.targets.wheel.force-include]
"schema/block-qa.schema.json" = "block_qa_schema/block-qa.schema.json"
"schema/qa-script.schema.json" = "block_qa_schema/qa-script.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "python/block_qa_schema",
  "schema/block-qa.schema.json",
  "schema/qa-script.schema.json",
  "tests",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
