[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "witness-schema"
version = "0.1.1"
description = "Pydantic models for the QOU witness JSON format. Cross-language interchange schema for *.witness.json files emitted by qou-substrate's WitnessBuilder."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quantum Observable Universe contributors" }]
keywords = ["witness", "json-schema", "pydantic", "qou", "reproducibility"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering",
  "Topic :: File Formats :: JSON :: JSON Schema",
]
dependencies = [
  "pydantic>=2.0",
]

[project.optional-dependencies]
test = ["pytest>=7", "jsonschema>=4"]

[project.urls]
Homepage = "https://github.com/litlfred/qou"
Source = "https://github.com/litlfred/qou/tree/main/tools/witness-schema"
Issues = "https://github.com/litlfred/qou/issues"
"JSON Schema" = "https://github.com/litlfred/qou/blob/main/tools/witness-schema/schema/witness.schema.json"

[tool.hatch.build.targets.wheel]
packages = ["python/witness_schema"]

# Include the canonical JSON schema in the wheel as package data so
# `pip install witness-schema` users can locate it at runtime via
# `importlib.resources.files("witness_schema") / "witness.schema.json"`.
[tool.hatch.build.targets.wheel.force-include]
"schema/witness.schema.json" = "witness_schema/witness.schema.json"

[tool.hatch.build.targets.sdist]
include = [
  "python/witness_schema",
  "schema/witness.schema.json",
  "tests",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
