[package]
name = "hecke-engine-jvm"
version = "0.1.0"
edition = "2021"
description = "UniFFI bindings for hecke-engine — Kotlin / Java / Swift consumers"
license = "MIT"
repository = "https://github.com/litlfred/qou"
publish = false

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]
name = "hecke_engine_jvm"

[dependencies]
# UniFFI is Mozilla's multi-language binding generator. Same Rust
# core, multiple foreign-language consumers (Kotlin, Swift, Python,
# Ruby) from one .udl interface file. https://mozilla.github.io/uniffi-rs/
uniffi = { version = "0.28", features = ["cli"] }
# Same canonical hecke-engine core as pyhecke-native / hecke-engine-node.
# Default features = ["mpfr"] — JVM consumers run native, have system
# GMP/MPFR available (Android also via NDK).
hecke-engine = { path = "../hecke-engine" }
# Phase B error-enum derivation for chi_lambda_braid + tr_m_atomic_mpfr.
thiserror = "1"

[build-dependencies]
uniffi = { version = "0.28", features = ["build"] }

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
