[package]
name = "hecke-engine-node"
version = "0.1.0"
edition = "2021"
description = "napi-rs Node.js native bindings for hecke-engine Gram/trace primitives"
license = "MIT"
repository = "https://github.com/litlfred/qou"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# napi-rs is the Rust-to-Node.js binding generator (the Node-native
# analogue of pyo3 for Python). napi >= 2.16 supports both N-API v6
# (Node 12.22+) and the newer event-loop integration.
napi = { version = "2.16", default-features = false, features = ["napi9"] }
napi-derive = "2.16"

# Depend on the FULL hecke-engine (default features = ["mpfr"]) so
# all Gram + trace primitives are available, matching pyhecke-native.
# The Node native runtime has access to system GMP/MPFR via Node's
# native-module loader, so the mpfr cone is fine here (unlike WASM).
hecke-engine = { path = "../hecke-engine" }

[build-dependencies]
napi-build = "2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
