[package]
name = "hecke-engine"
version = "0.8.0"
edition = "2021"
description = "Gröbner reduction engine for H_n(q) — nuclear normal forms"

# Joint-tower SDP certificate emitter (R1+R2+R6 of RUST_INTEGRATION.md)
[[bin]]
name = "joint-tower-sdp"
path = "src/bin/joint_tower_sdp.rs"

# R5.5 scaling sanity check (requires Clarabel SDP backend)
[[bin]]
name = "r5-5-scale-test"
path = "src/bin/r5_5_scale_test.rs"
required-features = ["clarabel-sdp"]

# R5.5 H_5 anomaly diagnostic (requires Clarabel SDP backend)
[[bin]]
name = "r5-5-diagnose-h5"
path = "src/bin/r5_5_diagnose_h5.rs"
required-features = ["clarabel-sdp"]

# R5.5 minimal H_5 SDP isolation test (requires Clarabel SDP backend)
[[bin]]
name = "r5-5-minimal-h5"
path = "src/bin/r5_5_minimal_h5.rs"
required-features = ["clarabel-sdp"]

# Round 4 SDP-side smoke test: BlockDiagPSDConeT + Solution<T> accessors
[[bin]]
name = "clarabel-round4-sdp-smoke"
path = "src/bin/clarabel_round4_sdp_smoke.rs"
required-features = ["clarabel-sdp"]

# Round 4 + Phase 8a smoke test: tighten_to_rational + iter_diagnostics on rationals
[[bin]]
name = "clarabel-round4-rational-smoke"
path = "src/bin/clarabel_round4_rational_smoke.rs"
required-features = ["clarabel-bigrational"]

# Phase 8b smoke test: MpfrFloat run-time MPFR float backend
[[bin]]
name = "clarabel-phase8b-mpfr-smoke"
path = "src/bin/clarabel_phase8b_mpfr_smoke.rs"
required-features = ["clarabel-mpfr"]

# §S8 — exact-rational LP at QOU's canonical q_0
[[bin]]
name = "clarabel-h3-exact-lp"
path = "src/bin/clarabel_h3_exact_lp.rs"
required-features = ["clarabel-bigrational"]

# Operator-selection LP (prop:operator-selection-lp) — MPFR JSON CLI.
# Replaces the scipy HiGHS f64 path in pyhecke.lp_dual_solver at 50 dps.
[[bin]]
name = "clarabel-operator-selection-lp"
path = "src/bin/clarabel_operator_selection_lp.rs"
required-features = ["clarabel-mpfr"]

# §S9.4 — Peyrl-Parrilo dual-certificate CLI: f64 IPM → rationalise dual
# → Sturm-chain PSD verify
[[bin]]
name = "clarabel-certify"
path = "src/bin/clarabel_certify.rs"
required-features = ["clarabel-sdp"]

# Lasserre moment-matrix SDP (canonical QOU dense lift, prop:confinement-sdp)
[[bin]]
name = "clarabel-confinement-moment-sdp"
path = "src/bin/clarabel_confinement_moment_sdp.rs"
required-features = ["clarabel-sdp"]

# R5.6 Wedderburn-block decomposition smoke: per-block ≡ monolithic at H_3/H_4
[[bin]]
name = "r5-6-smoke"
path = "src/bin/r5_6_smoke.rs"
required-features = ["clarabel-sdp"]

# Per-Wedderburn-block matrix dump for sign-convention audits
[[bin]]
name = "dump-block-matrices"
path = "src/bin/dump_block_matrices.rs"

# Default binary: v8 inductive symbolic chaining (exact in q)
[[bin]]
name = "hecke-engine"
path = "src/bin/v8.rs"

# Gram matrix for H_3(q) — M3 Rust carve-out
[[bin]]
name = "hecke-gram"
path = "src/bin/hecke_gram.rs"

# Wenzl LR bridge: tensor-product character via LR decomposition.
# Used by P4ⁱᵛ to compute |tr_M(⁴He)| at H_12 without the full
# Hoefsmit evaluation. See `src/wenzl_lr.rs` and
# `docs/audits/2026-05-17-p4tt-migration-triage.md` §"Items 2-4".
[[bin]]
name = "hecke-tr-m-wenzl-lr"
path = "src/bin/hecke_tr_m_wenzl_lr.rs"
# Imports laurent_poly_q (rug-backed).
required-features = ["mpfr"]

# Canonical χ^λ for atomic braids — direct f64 Hoefsmit at H_n
# (with averaged-crossing expansion). Primitive for the canonical
# |tr_M| consumer; bypasses the tensor-product LR composition that
# was broken for canonical atomic braids. See `src/wenzl_lr.rs`
# (chi_lambda_canonical_h_n_f64) and
# `docs/audits/2026-05-17-knot-fusion-step1-audit.md`.
[[bin]]
name = "hecke-canonical-chi"
path = "src/bin/hecke_canonical_chi.rs"
# Uses rug directly for MPFR-precision Hoefsmit.
required-features = ["mpfr"]

# Geck-Pfeiffer cross-validator (gp_cross_validate.rs). Explicitly
# registered with `required-features = ["mpfr"]` so it is skipped
# under `--no-default-features` (would otherwise be auto-detected by
# Cargo from `src/bin/`, breaking WASM-targetable builds).
[[bin]]
name = "gp-cross-validate"
path = "src/bin/gp_cross_validate.rs"
required-features = ["mpfr"]

# Unified CLI — M2e — dispatches to subcommands (native Gram, exec for legacy).
[[bin]]
name = "hecke"
path = "src/bin/hecke.rs"

# Float engine for large A where symbolic overflows
[[bin]]
name = "hecke-float"
path = "src/bin/v6.rs"

# BigInt engine for A > 20 (no overflow)
[[bin]]
name = "hecke-bigint"
path = "src/bin/v9.rs"
# Uses rug directly.
required-features = ["mpfr"]

# CRT modular engine — u64 arithmetic, no BigInt (v10)
[[bin]]
name = "hecke-crt"
path = "src/bin/v10_crt.rs"

# Original float engine with Q-value computation
[[bin]]
name = "hecke-qvalues"
path = "src/main.rs"

[dependencies]
rustc-hash = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rug = mpfr bindings (system GMP + MPFR + libc). Optional behind the
# `mpfr` feature, which is on by default — `cargo build` keeps full
# functionality. Disable for WASM-targetable builds: `cargo build
# --lib --no-default-features`. See tools/hecke-engine-wasm/ for
# the canonical WASM consumer of the rug-free surface.
rug = { version = "1.26", optional = true }
num-bigint = "0.4"
num-rational = "0.4"
num-traits = "0.2"
num-integer = "0.1"
rayon = "1.10"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
# Clarabel-rs is feature-gated behind `clarabel-sdp`. Default builds do not
# pull in OpenBLAS / netlib / gfortran. The R5-full SDP-as-solver path
# (sdp_solve_canonical_t_w, sdp_recover_canonical, sdp_solver_clarabel) is
# compiled only when the feature is enabled. The bisection-based α* verifier
# (sdp_verifier) and the Wedderburn-block PSD evaluator (wedderburn_psd) work
# without it.
clarabel = { version = "0.11", default-features = false, optional = true }

[features]
# Default = mpfr only. Preserves the pre-carve-out behavior where
# `rug` was a non-optional dependency (so `cargo build` always pulled
# it in). Clarabel-sdp stays opt-in — bins that need it carry
# `required-features = ["clarabel-sdp"]` and are skipped under
# default builds (the prior contract). This keeps pyhecke-native +
# all default `cargo build` users at byte-identical behavior; only
# new users opting into `--no-default-features` see the carve-out.
default = ["mpfr"]
# mpfr: enables `rug` (system GMP + MPFR). 13 source modules in the
# transitive cone: precision_scalar, dense_la_mpfr, laurent_poly_q,
# sdp_clarabel_mpfr_prep, seminormal_mpfr, laurent_rational_q,
# tr_m_atomic_mpfr, geck_pfeiffer (Tier A/B: `use rug` direct), plus
# laurent_hecke_element, reduce_laurent, seminormal_mn, tr_m_word_lq,
# wenzl_lr, atomic_reduce_cache (Tier C: transitive importers).
# Disabling carves out the WASM-targetable canonical surface
# (certificate, cross_level_embedding, gb_nf_reducer, gram,
# joint_tower_sdp_certificate, littlewood_richardson, rational_round,
# sdp_verifier, seminormal, sturm_psd, wedderburn_psd — 11 modules,
# ~3 500 LOC of pure-Rust compute).
mpfr = ["dep:rug"]
# wasm-core: explicit signal that an intentional WASM-targetable build
# is in progress. No-op flag — the actual exclusion is done via
# `--no-default-features`. Used by tools/hecke-engine-wasm/ for intent
# clarity in build scripts.
wasm-core = []
# Opt-in: enables the Clarabel-rs SDP-as-solver code path. Requires system
# OpenBLAS + LAPACK + gfortran. Use `cargo build --features clarabel-sdp`.
clarabel-sdp = ["dep:clarabel", "clarabel?/sdp-netlib", "clarabel?/serde"]
# Opt-in: exact-rational backend (Round 4 + Phase 8a). Mutually exclusive
# with `clarabel-sdp` — the upstream `bigrational + sdp` combo is intentionally
# unsupported (eigendecomposition on rationals is not feasible).
clarabel-bigrational = ["dep:clarabel", "clarabel?/bigrational", "clarabel?/serde"]
# Opt-in: run-time MPFR float backend (Phase 8b).  Provides MpfrFloat
# at arbitrary precision; recommended path for QOU §S4-S6 (50-dps SDP).
clarabel-mpfr = ["dep:clarabel", "clarabel?/mpfr", "clarabel?/serde"]

[build-dependencies]

# Pin Clarabel-rs to the litlfred fork's bigrational-backend branch.
#
# Rationale: upstream PR https://github.com/litlfred/Clarabel.rs/pull/1
# ships the trait-decoupling and Copy → Clone refactor that QOU needs
# for the §S8 exact-rational diagnostic, plus the rug-interop feature
# that lets seminormal_mpfr's rug::Float outputs flow into the solver
# without an f64 round-trip.  See CLARABEL_PRECISION_PLAN.md.
#
# Validated at 9673209 (Round 4 + Phase 8a/8b): 71/71 hecke-engine
# tests pass under `cargo test --features clarabel-sdp`.  This pin
# is the branch HEAD and includes Phase 8a (denom-bit log), Phase 8b
# (run-time MpfrFloat backend), and Round 4 (BlockDiagPSDConeT,
# tighten_to_rational, structured Solution<T> accessors).
# Same f64 SDP path that 0.11.1 from crates.io carried, plus all
# the high-precision T headroom QOU's workplan needs.
#
# Will be lifted once the fork merges to its own main and a release
# is cut on crates.io.
[patch.crates-io]
clarabel = { git = "https://github.com/litlfred/Clarabel.rs", rev = "9673209" }

[profile.release]
opt-level = 3
lto = true

# Modular port of v9 — u64 mod p, identical NF
[[bin]]
name = "hecke-modular"
path = "src/bin/v11_modular.rs"

# Atomic braid: protons + neutrons + electrons in H_{A+Z}(q)
[[bin]]
name = "hecke-atomic"
path = "src/bin/v12_atomic.rs"

# Streaming reduction: reduce during multiplication (lower peak memory)
[[bin]]
name = "hecke-stream"
path = "src/bin/v13_stream.rs"

# HA-power ring engine for pp...nn ordering
[[bin]]
name = "hecke-hapower"
path = "src/bin/v14_hapower.rs"

# Per-irrep Garside via Young's seminormal form (vector + confine + knots)
[[bin]]
name = "hecke-irrep"
path = "src/bin/v14_irrep.rs"

# Molecular binding: two atoms + bond crossings on full tower
[[bin]]
name = "hecke-molecular"
path = "src/bin/v15_molecular.rs"

# Tensor product molecular binding
[[bin]]
name = "hecke-tensor"
path = "src/bin/v16_tensor.rs"

# Full partition molecular binding (all irreps, not just 2-row)
[[bin]]
name = "hecke-allparts"
path = "src/bin/v17_allparts.rs"

# Per-generator Wedderburn vertex volumes (correct functional)
[[bin]]
name = "hecke-pergen"
path = "src/bin/v18_pergen.rs"

# Nuclear mass table Z=1-20 (correct 3-channel formula)
[[bin]]
name = "hecke-mass"
path = "src/bin/v19_nuclear_mass.rs"
