[package]
name = "pyhecke-native"
version = "0.9.0"
edition = "2021"
description = "PyO3 bindings for hecke-engine Gram/trace primitives"

[lib]
name = "pyhecke_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.25", features = ["extension-module"] }
nalgebra = { version = "0.33", default-features = false, features = ["std"] }
hecke-engine = { path = "../hecke-engine" }

[features]
# OFF by default — keeps the shipped wheel light and the build simple.
# When enabled, exposes `operator_selection_lp` (MPFR LP, prop:operator-
# selection-lp) and pulls clarabel + rug/MPFR into the wheel.  Flipping it
# into the default wheel build is a follow-up: the wheel CI must add this
# feature + gmp/mpfr on every platform and an import test in a numpy env.
clarabel-lp = ["hecke-engine/clarabel-mpfr"]

[profile.release]
opt-level = 3
lto = true

[patch.crates-io]
# Mirror hecke-engine's clarabel pin.  `[patch]` only applies from the
# build-root manifest, so when pyhecke-native is the root (the wheel build),
# the clarabel `mpfr` feature — present only on the litlfred fork, not
# crates.io 0.11 — would otherwise be unresolvable.  Keep the rev in sync
# with tools/hecke-engine/Cargo.toml.
clarabel = { git = "https://github.com/litlfred/Clarabel.rs", rev = "9673209" }
