[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "pyhecke-native"
version = "0.9.0"
description = "PyO3 native acceleration layer for pyhecke"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "QOU contributors" }
]
# No pure-Python install deps — the native extension is standalone.

[tool.maturin]
module-name = "pyhecke_native"
features = ["pyo3/extension-module"]
