[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyhecke"
version = "0.1.1"
description = "Hecke algebra + Gram matrix + tower binding infrastructure for the QOU paper pipeline"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "QOU contributors" }
]
dependencies = [
  "numpy>=1.24",
  "mpmath>=1.3",
  "jsonschema>=4.20"
]

[project.optional-dependencies]
symbolic = ["sympy>=1.12"]
test = ["pytest>=7.4", "jsonschema>=4.20"]

[tool.hatch.build.targets.wheel]
packages = ["python/pyhecke"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["python"]
