[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "qou-substrate"
version = "0.1.2"
description = "QOU substrate-infra trio: q_0 parameter, mpmath precision discipline, WitnessBuilder. The pure-Python foundation 67% of QOU compute scripts depend on."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Quantum Observable Universe contributors" }]
keywords = ["physics", "hecke-algebra", "witness", "mpmath", "qou"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
  "mpmath>=1.3",
]

[project.optional-dependencies]
test = [
  "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/litlfred/qou"
Documentation = "https://litlfred.github.io/qou/"
Source = "https://github.com/litlfred/qou/tree/main/tools/qou-substrate"
Issues = "https://github.com/litlfred/qou/issues"

[tool.hatch.build.targets.wheel]
packages = ["python/qou_substrate"]

[tool.hatch.build.targets.sdist]
include = [
  "python/qou_substrate",
  "tests",
  "README.md",
  "pyproject.toml",
]

[tool.pytest.ini_options]
pythonpath = ["python"]
testpaths = ["tests"]
